Category, CategoryRepository 추가

--- a/src/main/resources/i18n/exception-en.properties
+++ b/src/main/resources/i18n/exception-en.properties
@@ -6,3 +6,5 @@ userEmailAlreadyExistsException.msg=userEmailAlreadyExistsException : {0}
 userNotFoundException.msg=userNotFoundException
 roleNotFoundException.msg=roleNotFoundException
 missingRequestHeaderException.msg=missingRequestHeaderException : {0}
+categoryNotFoundException.msg=categoryNotFoundException
+refreshTokenFailureException.msg=refreshTokenFailureException
