--- a/src/main/resources/i18n/validation-en.properties
+++ b/src/main/resources/i18n/validation-en.properties
@@ -9,3 +9,6 @@ signUpRequest.password.pattern=signUpRequest.password.pattern
 signUpRequest.nickname.notBlank=signUpRequest.nickname.notBlank
 signUpRequest.nickname.size=signUpRequest.nickname.size
 signUpRequest.nickname.pattern=signUpRequest.nickname.pattern
+
+categoryCreateRequest.name.notBlank=categoryCreateRequest.name.notBlank
+categoryCreateRequest.name.size=categoryCreateRequest.name.size
