--- a/src/main/resources/i18n/exception-en.properties
+++ b/src/main/resources/i18n/exception-en.properties
@@ -7,4 +7,5 @@ userNotFoundException.msg=userNotFoundException
 roleNotFoundException.msg=roleNotFoundException
 missingRequestHeaderException.msg=missingRequestHeaderException : {0}
 categoryNotFoundException.msg=categoryNotFoundException
+postNotFoundException.msg=postNotFoundException
 refreshTokenFailureException.msg=refreshTokenFailureException
