--- a/src/main/resources/i18n/exception.properties
+++ b/src/main/resources/i18n/exception.properties
@@ -7,6 +7,7 @@ userNotFoundException.code=-1007
 roleNotFoundException.code=-1008
 missingRequestHeaderException.code=-1009
 categoryNotFoundException.code=-1010
+postNotFoundException.code=-1012
 refreshTokenFailureException.code=-1017
 
 exception.msg=오류가 발생하였습니다.
@@ -18,4 +19,5 @@ userNotFoundException.msg=요청한 회원을 찾을 수 없습니다.
 roleNotFoundException.msg=요청한 권한 등급을 찾을 수 없습니다.
 missingRequestHeaderException.msg={0} 요청 헤더가 누락되었습니다.
 categoryNotFoundException.msg=해당 카테고리를 찾을 수 없습니다.
+postNotFoundException.msg=해당 포스트를 찾을 수 없습니다.
 refreshTokenFailureException.msg=토큰 재발급에 실패하였습니다.
