포스트 목록 조회 기능 완료

--- a/src/main/resources/i18n/validation-en.properties
+++ b/src/main/resources/i18n/validation-en.properties
@@ -12,3 +12,17 @@ signUpRequest.nickname.pattern=signUpRequest.nickname.pattern
 
 categoryCreateRequest.name.notBlank=categoryCreateRequest.name.notBlank
 categoryCreateRequest.name.size=categoryCreateRequest.name.size
+
+postCreateRequest.title.notBlank=postCreateRequest.title.notBlank
+postCreateRequest.content.notBlank=postCreateRequest.content.notBlank
+postCreateRequest.categoryId.notNull=postCreateRequest.categoryId.notNull
+postCreateRequest.categoryId.positiveOrZero=postCreateRequest.categoryId.positiveOrZero
+postCreateRequest.thumbnailUrl.url=postCreateRequest.thumbnailUrl.url
+
+postUpdateRequest.title.notBlank=postUpdateRequest.title.notBlank
+postUpdateRequest.content.NotBlank=postUpdateRequest.content.NotBlank
+postUpdateRequest.thumbnailUrl.url=postUpdateRequest.thumbnailUrl.url
+
+postReadCondition.size.notNull=postReadCondition.size.notNull
+postReadCondition.size.positive=postReadCondition.size.positive
+postReadCondition.lastPostId.positive=postReadCondition.lastPostId.positive
