--- a/src/main/resources/i18n/validation.properties
+++ b/src/main/resources/i18n/validation.properties
@@ -12,3 +12,17 @@ signUpRequest.nickname.pattern=닉네임은 한글 또는 알파벳만 입력해
 
 categoryCreateRequest.name.notBlank=카테고리 명을 입력해주세요.
 categoryCreateRequest.name.size=카테고리 명의 길이는 2글자에서 30글자 입니다.
+
+postCreateRequest.title.notBlank=포스트 제목을 입력해주세요.
+postCreateRequest.content.notBlank=포스트 본문을 입력해주세요.
+postCreateRequest.categoryId.notNull=카테고리 아이디를 입력해주세요.
+postCreateRequest.categoryId.positiveOrZero=올바른 카테고리 아이디를 입력해주세요.
+postCreateRequest.thumbnailUrl.url=올바른 썸네일 URL을 입력해주세요.
+
+postUpdateRequest.title.notBlank=포스트 제목을 입력해주세요.
+postUpdateRequest.content.NotBlank=포스트 본문을 입력해주세요.
+postUpdateRequest.thumbnailUrl.url=올바른 썸네일 URL을 입력해주세요.
+
+postReadCondition.size.notNull=페이지 크기를 입력해주세요.
+postReadCondition.size.positive=올바른 페이지 크기를 입력해주세요. (1 이상)
+postReadCondition.lastPostId.positive=올바른 포스트 ID를 입력해주세요.(1 이상)
